# lick

./: README.md
docs/: lick.md
examples/: lickable  root.lick
source/: .gitignore  CMakeLists.txt  context.cpp  context.h  expr.cpp  expr.h  funcs.cpp  funcs.h  hashstore.cpp  hashstore.h  lick.cpp  lick.vcsxproj  module.cpp  module.h  parser.cpp  parser.h  sha1.cpp  stmt.cpp  stmt.h  sys_funcs.cpp  sys_funcs.h  value.cpp  value.h
